# telco_churn

./: .pre-commit-config.yaml  README.md  databricks.yml  pre-commit-config.yaml  project_config_telco.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
demo_artifacts/: logged_model.json  mlflow_experiment.json  run_info.json
downloaded_artifacts/demo_artifacts/: mlflow_experiment.json  run_info.json
notebooks/: 01_data_preprocessing.py  03_train_register_basic_model.py  04_train_register_custom_model.py  05_ab_testing.py  06_deploy_model_serving_endpoint.py  lecture10.marvel_create_monitoring_table.py  lecture2.marvel_data_preprocessing.py  lecture3.mlflow_experiment_tracking.py  lecture4.train_register_basic_model.py  lecture4.train_register_custom_model.py  lecture6.ab_testing.py  lecture6.deploy_model_serving_endpoint.py
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/533154299310359696/: meta.yaml
notebooks/mlruns/533154299310359696/26a8333a44d744f4a6c42eaf4f9a17ca/: meta.yaml
resources/: bundle_monitoring.yml  model_deployment.yml
scripts/: deploy_model.py  process_data.py  refresh_monitor.py  train_register_custom_model.py
src/marvel_characters/: data_processor.py  monitoring.py
src/marvel_characters.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/marvel_characters/models/: __init__.py  basic_model.py  custom_model.py
src/marvel_characters/serving/: model_serving.py
src/telco_churn/: __init__.py  config.py  data_processor.py  monitoring.py  utils.py
src/telco_churn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/telco_churn/models/: basic_model.py  custom_model.py
src/telco_churn/serving/: model_serving.py
tests/: __init__.py  conftest.py
tests/marvel_characters/: __init__.py  test_data_processor.py
tests/telco_churn/: test_data_processor.py
typings/: __builtins__.pyi
(+3 files in other folders)
